fix: Add overflow visible so react-select can be shown properly

--- a/src/sharing/share.styl
+++ b/src/sharing/share.styl
@@ -61,7 +61,8 @@
     display flex
     flex-direction column
     flex-grow 1
-
+    overflow: visible
+    
     > .share-byemail-onlybylink
         margin 0
 
